<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Enger</string>

    <!--main activity start-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nothing_to_show">Nothing to show</string>
    <string name="no_result">No result</string>

    <string name="action_settings">Settings</string>
    <string name="hint_search">Type it here!</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Your name</string>
    <string name="email">Your email address</string>

    <string name="nav_dictionaries">Dictionaries</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_review">Review</string>
    <string name="my_stars">Stars</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="nav_about">About</string>
    <string name="nav_quit">Quit</string>
    <string name="github_enger">https://github.com/perphyyoung/Enger</string>
    <!--main activity end-->

    <!--dict activity start-->
    <string name="sort_dict_button">Sort Dict Button</string>
    <!--dict activity end-->

    <!--word detail activity start-->
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <!--word detail activity end-->

    <!--daily activity start-->
    <string name="action_daily_sentence">Daily Sentence</string>
    <string name="action_clear_history">Clear History</string>
    <string name="daily_date">2016–03–29</string>
    <string name="daily_english">A soldier would rather face a firing squad a thousand times
        over than just once have to look his own colleagues in the eye
        knowing he had failed them.</string>
    <string name="daily_chinese">一名军人宁愿被行刑队枪毙一千次，也不愿让战友看见自己逃命的背影。</string>
    <string name="daily_tts" tools:ignore="TypographyDashes">http://news.iciba.com/admin/tts/2016-03-29-day.mp3</string>
    <string name="daily_comment">词霸小编：不知道大家有没有去看蝙蝠侠大战超人呢？小编可以在周四的晚上就卯足了劲去看了首映，
        看完之后觉得没有惊喜也没有太多失望，前面叙事有些混乱，整个片子太严肃和深沉了。
        前90分钟各种铺垫和线索，如果你没看过超人前传和蝙蝠侠之前的几部，看这个还是有些稍微吃力的。
        从第90分钟开始就好了很多，各种打斗和预料中的大决战就开始了（前后包括两场决战），最后还有神奇女侠正装出现哦~总体来说3星到4星吧~</string>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="wifi_only">Wifi Only</string>
    <string name="network_not_available">Network is not available.</string>
    <string name="add_note">Add to Notes</string>
    <string name="action_refresh">Refresh</string>
    <!--daily activity end-->

    <!--review activity start-->
    <string name="title_activity_review">Review</string>
    <string name="tap_to_see">Tap to see the word</string>
    <string name="your_learning_curve">Your Learning Curve</string>
    <string name="date_range">Date Range</string>
    <string name="word_count">Word Count</string>
    <!--review activity end-->

    <!--star activity start-->
    <string name="title_activity_star">Star</string>
    <!--star activity end-->

    <!--note activity start-->
    <string name="title_activity_note">Note</string>
    <string name="note_title">Title</string>
    <string name="note_content">Content</string>
    <string name="title_activity_note_detail">Detail</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_discard">Discard</string>
    <string name="action_export">Export Note</string>
    <string name="action_import">Import Note</string>
    <string name="action_delete">Delete</string>
    <!--note activity end-->

    <!--settings activity start-->
    <string name="cbpWifiOnly">cbpWifiOnly</string>
    <string name="summary_wifi_only">Retrieve data only via WIFI</string>
    <string name="summary_wifi_both">Retrieve data via WIFI and Mobile</string>
    <string name="lpMaxWordCount">lpMaxWordCount</string>
    <string name="lpMaxWordCountSummary">The max word count of daily review. Current: %1$d</string>
    <string name="etpName">etpName</string>
    <string name="etpEmail">etpEmail</string>
    <string-array name="list_max_word_count">
        <item>10</item>
        <item>30</item>
        <item>50</item>
    </string-array>
    <!--settings activity end-->
</resources>
